# svm_cpp

./: LICENSE  README.md
HardMargin-SVM/: CMakeLists.txt  README.md
HardMargin-SVM/datasets/toy/test/class1/: data2.txt  data3.txt  data5.txt  data6.txt
HardMargin-SVM/datasets/toy/test/class2/: data1.txt  data3.txt  data4.txt
HardMargin-SVM/datasets/toy/train/class1/: data4.txt  data5.txt
HardMargin-SVM/datasets/toy/train/class2/: data1.txt  data2.txt  data3.txt  data4.txt
HardMargin-SVM/scripts/: toy.sh
HardMargin-SVM/src/: main.cpp  svm.cpp  svm.hpp
Kernel-SVM/: CMakeLists.txt  README.md
Kernel-SVM/datasets/toy/test/class2/: data6.txt
Kernel-SVM/datasets/toy/train/class1/: data3.txt
Kernel-SVM/datasets/toy/train/class2/: data1.txt  data2.txt  data3.txt  data4.txt
Kernel-SVM/scripts/: toy.sh
Kernel-SVM/src/: main.cpp  svm.cpp  svm.hpp
OC-SVM/: CMakeLists.txt  README.md
OC-SVM/datasets/toy/test/anomaly/: data1.txt  data2.txt  data4.txt  data5.txt
OC-SVM/datasets/toy/test/normal/: data3.txt
OC-SVM/scripts/: toy.sh
OC-SVM/src/: main.cpp  svm.cpp  svm.hpp
SVDD/: CMakeLists.txt  README.md
SVDD/datasets/toy/test/anomaly/: data3.txt
SVDD/datasets/toy/test/normal/: data5.txt  data6.txt
SVDD/datasets/toy/train/: data4.txt
SVDD/scripts/: toy.sh
SVDD/src/: main.cpp  svdd.cpp  svdd.hpp
SoftMargin-SVM/: CMakeLists.txt  README.md
SoftMargin-SVM/datasets/toy/test/class2/: data2.txt  data6.txt
SoftMargin-SVM/datasets/toy/train/class1/: data2.txt  (+1 more)
SoftMargin-SVM/scripts/: toy.sh
SoftMargin-SVM/src/: main.cpp  svm.cpp  svm.hpp
(+2 files in other folders)
